# esp32-http-webserver

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
data/: root.html
main/: CMakeLists.txt  main.c
